--- a/public/index.html
+++ b/public/index.html
@@ -2,26 +2,50 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/blendTheory.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <script src="https://kit.fontawesome.com/672f8cb41c.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/672f8cb41c.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- In your index.html or public/index.html -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
 
+    <!--Splash Screen-->
+    <link
+      rel="apple-touch-startup-image"
+      href="blendTheory512x512.png"
+      media="(device-width: 320px) and (device-height: 568px)"
+    />
+    <link
+      rel="apple-touch-startup-image"
+      href="blendTheory512x512.png"
+      media="(device-width: 375px) and (device-height: 667px)"
+    />
+    <link
+      rel="apple-touch-startup-image"
+      href="blendTheory512x512.png"
+      media="(device-width: 375px) and (device-height: 812px)"
+    />
+    <!-- Add more images for other devices as necessary -->
 
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/blendTheory192x192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="./manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -31,7 +55,18 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+
+    <!-- Status bar appearance -->
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
+    <!-- Can be 'default', 'black', or 'black-translucent' -->
+
+    <!-- App icon (for home screen) -->
+    <link rel="apple-touch-icon" href="blendTheory192x192.png" />
+    <title>Blend Theory</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
