adding webpack config and splash screen for pwa

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,11 @@
     <link rel="icon" href="%PUBLIC_URL%/blendTheory.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <script
-      src="https://kit.fontawesome.com/672f8cb41c.js"
-      crossorigin="anonymous"
-    ></script>
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-touch-fullscreen" content="yes" />
+    <meta name="apple-mobile-web-app-title" content="Expo" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <!-- In your index.html or public/index.html -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="manifest" href="/manifest.json" />
@@ -21,17 +22,17 @@
     <!--Splash Screen-->
     <link
       rel="apple-touch-startup-image"
-      href="blendTheory512x512.png"
+      href="logo.png"
       media="(device-width: 320px) and (device-height: 568px)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="blendTheory512x512.png"
+      href="logo.png"
       media="(device-width: 375px) and (device-height: 667px)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="blendTheory512x512.png"
+      href="logo.png"
       media="(device-width: 375px) and (device-height: 812px)"
     />
     <!-- Add more images for other devices as necessary -->
